# Bsc_TEM_tools

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup_assistant.ipynb
TEM_tools/tem/: survey_tem.py  survey_tem_extended.py
TEM_tools/tem/inversion/: empymod_inversion.py
hutweiden/: TEM_hutweiden.py
hutweiden/dir/TEM-coordinates/01-raw/: 20240917_tem_hutweiden_coords.csv  TEM_intersections_buffered.csv
hutweiden/dir/TEM-data/01-raw/: 20241008_Hutweidelacke_txt.tem
hutweiden/dir/TEM-data/02-preprocessed/: 20241008_Hutweidelacke_txt_proc.tem
hutweiden/dir/TEM-data/03-filtered/: H001.tem  H002.tem  H003.tem  H004.tem  H005.tem  H006.tem  H007.tem  H008.tem  H009.tem  H010.tem  H011.tem  H012.tem  H013.tem  H014.tem  H015.tem  H016.tem  H017.tem  H018.tem  H019.tem  H020.tem  (+35 more)
src/TEM_tools/: __init__.py
src/TEM_tools/tem/: survey_tem.py  survey_tem_extended.py
src/core/: gp_coords.py  gp_file.py  gp_folder.py
src/framework/: coordinatehandler.py  filehandler.py  survey_base.py
src/tem/: survey_tem.py  survey_tem_extended.py  test_survey_tem.py
src/tem/TEM_frwrd/: TEM_inv.py
src/templates/dir_structure/: ert_default.yml  tem_default.yml
src/templates/file_type/: ohm.yml  syscal.yml
test/: TEM_test.py  golden_section_search.py  test_filehandler.py  try_resipy.py
test/invdir/: R2.in  R2.out  electrodes.vtk  f001_res.vtk  mesh.geo  mesh.msh
test/test_data/: p1_testfile.ohm  syscal_testcoords.csv  syscal_testpreproc.yml
test_dir/TEM-coordinates/02-processed/: 20240917_tem_hutweiden_coords_proc.csv
(+70 files in other folders)
