[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "TEM_tools"
version = "1.0.0"
authors= [
    {name="Peter Balogh", email="e12202337@student.tuwien.ac.at"},
    {name="Jakob Welkens", email="jakob.welkens@tuwien.ac.at"},
]
description = "A package for the Bachelor thesis of the authors"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "empymod==2.4.0",
    "ipython==8.28.0",
    "obspy==1.4.1",
    "numpy>=1.26,<2.0",
    "pandas==2.2.3",
    "pygimli==1.5.2",
    "ipykernel",
    "ipywidgets",
    "ipympl"
]

[project.urls]
Homepage = "https://github.com/pb-tuwien/Bsc_TEM_tools"
Issues = "https://github.com/pb-tuwien/Bsc_TEM_tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]